@@ -164,12 +164,12 @@ NEW FEATURES
 	vector of length 1, returning the NativeSymbolInfo object.
 
     o	The method $.DLLInfo resolves the specified symbol in the DLL,
-	returning a NativeSymbolInfo object. Use [[ to access the actual
+	returning a NativeSymbolInfo object.  Use [[ to access the actual
 	values in the DLLInfo object.
 
     o	The useDynLib() directive in the NAMESPACE file now accepts the
 	names of the native/foreign symbols that are to be resolved in
-	the DLL for use in .C/.Call/.Fortran/.Externa calls. These can
+	the DLL for use in .C/.Call/.Fortran/.Externa calls.  These can
 	be used as regular R variables instead of the (routine name,
 	PACKAGE) pairs currently recommended.  Alternative names can
 	be given for the R variables mapping to these symbols.  See
@@ -273,6 +273,11 @@ C-LEVEL FACILITIES
 
     o	The BLAS which ships with R now contains the complete set of
 	double-complex BLAS routines, rather than just those used in R.
+
+	<R_ext/BLAS.h> has been corrected to add the missing
+	double-precision BLAS functions drotmg and drotm, and to
+	exclude lsame (which is a Lapack auxiliary function and is now
+	declared in <R_ext/Lapack.h>).
 
 
 BUG FIXES
